--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "yuri-configurator-server",
+  "name": "yuri-api",
   "version": "0.1.0",
-  "description": "The backend to the yuri configurator",
-  "repository": "github:Yuri-discordbot/configurator-server",
+  "description": "The yuri api",
+  "repository": "github:Yuri-discordbot/api",
   "author": {
     "name": "Catherine Gilbert",
     "email": "catherine.gilbert15@gmail.com",
-    "url": "olaren.dev"
+    "url": "https://olaren.dev"
   },
   "license": "MIT",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "data-access": "git://github.com/Yuri-discordbot/data-access"
+    "morgan": "^1.10.0"
   },
   "private": true
 }
