Update to es6 modules

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://olaren.dev"
   },
   "license": "MIT",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
