--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "express-graphql": "^0.12.0",
+    "graphql-tag": "^2.12.5",
+    "graphql-tools": "^8.1.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0"
   },
