--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "graphql": "^15.5.1",
     "express-graphql": "^0.12.0",
     "graphql-tag": "^2.12.5",
-    "graphql-tools": "^8.1.0",
+    "@graphql-tools/schema": "^8.0.3",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0"
