--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@graphql-tools/schema": "^8.0.3",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "http-status-codes": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
